Kubernates/ingress/defaultService-ingress-defination.yaml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  name: ingress-with-oneservice
spec:
  backend:
    serviceName: myservice
    servicePort: 80
