Kubernates/ingress/multipleDomainsMultipleRules.yaml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  name: onedomainmultipleservices
spec:
  rules:
    # this http is not the same http/https which we see in URL
    - host: "spiderman.myonelinestore.com"
      http:
        paths:
          - path: "/wear"
            backend:
              serviceName: my-wear-service
              servicePort: 80
            pathType: ImplementationSpecific
          - path: "/support"
            backend:
              serviceName: my-support-service
              servicePort: 80
            pathType: ImplementationSpecific
    - host: "hulk.marvelstudis.com"
      http:
        paths:
          - path: "/powers"
            backend:
              serviceName: my-superhero-powers
              servicePort: 80
            pathType: ImplementationSpecific
